# AIE6

01_Prompt Engineering and Prototyping Best Practices/: AIE6-Session01-Vibe-Check-Homework.ipynb
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  Pythonic_RAG_Assignment2.ipynb  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
03_End-to-End_RAG/: End-to-End_RAG.ipynb
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG_new.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  Introduction_to_LangGraph_for_Agents_Assignment_Version_original.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
06_Multi_Agent_with_LangGraph/content/data/74568d6d/: AI_News_Llama3_Research_Post.txt  (+1 more)
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace_backup.ipynb
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
09_Finetuning_Embeddings/data/: 2023_llms.html  2024_llms.html
10_Finetuning_Reasoning_Model/: Unsloth_GRPO_Training.ipynb
(+4 files in other folders)
