[project]
name = "02-embeddings-and-rag"
version = "0.1.0"
description = "Embeddings and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nump>=5.5.5.5",
    "openai>=1.59.7",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "faiss-cpu>=1.0.2",
    "langchain>=0.2.11",
    "langchain-openai>=0.2.11",
    "langchain-community>=0.2.11",
    "langchain-core>=0.2.11",
    "numpy>=1.26.1",
    "torch>=2.2.0",
]
